syntax = "proto3";//指定使用pb3

option csharp_namespace = "GrpcServiceDemo";//命名空间

package greet;

//会在obj\Debug\netcoreapp3.0自动生成Greet和Greeter类文件
//定义服务
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

//定义消息对象
message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
